--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -33,8 +33,10 @@ jobs:
         uses: actions/checkout@v3
       - name: Setup Pages
         uses: actions/configure-pages@v3
+      - name: Install dependencies
+        run: yarn install
       - name: Build
-        run: npm run build
+        run: yarn build
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v2
         with:
