--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -37,6 +37,8 @@ jobs:
         run: yarn install
       - name: Build
         run: yarn build
+      - name: Release
+        run: yarn release
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v2
         with:
