--- a/.github/workflows/build-and-deploy-release.yml
+++ b/.github/workflows/build-and-deploy-release.yml
@@ -65,14 +65,14 @@ jobs:
           draft: false
           prerelease: false
       - name: Zip files
-        run: zip -r trackingEngine.zip ./version/
+        run: zip -r trackingEngine.zip ./dist/
       - name: Upload Release Asset
         uses: actions/upload-release-asset@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./version/trackingEngine.zip
+          asset_path: ./trackingEngine.zip
           asset_name: trackingEngine.zip
           asset_content_type: application/zip
 
